--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Vue Blog App</title>
   </head>
-  <body>
+  <body style="background: #fff;">
     <div id="app">
       <!-- This is where our view instance will output everything to the browser -->
     </div>
